Major Backend Fixes

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Montecillo Roro | About us</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
-    <script src="../script.js" type="module"></script>
+    <script src="../scripts/main.js" type="module"></script>
 </head>
 
 <!-- 
@@ -24,7 +24,7 @@
         <!-- Navbar -->
         <nav id="navbar"
             class="fixed w-full h-20 py-4 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
-            <a href="index.html" class="text-lg font-bold flex items-center">
+            <a href="../index.html" class="text-lg font-bold flex items-center">
                 <img src="../assets/roro_transparent.png" class="w-12 h-12" alt="Logo" />
             </a>
 
