--- a/pages/register.html
+++ b/pages/register.html
@@ -8,8 +8,9 @@
     <title>Montecillo Roro | Register</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../script.js" type="module"></script>
-    <script src="../loginHandler.js" type="module"></script>
+    <script src="../scripts/main.js" type="module"></script>
+    <script src="../scripts/submit_register.js" type="module"></script>
+    <script src="../scripts/loginHandler.js" type="module"></script>
     <script>
         function togglePassVisibility() {
             let passwordField = document.getElementById("PasswordField");
@@ -123,10 +124,10 @@
                     </p>
                 </div>
             </div>
-            <div class="opacity-60 w-full max-w-md p-3 bg-red-200 shadow-lg rounded-xl border-red-400 border-[3px]">
+            <!-- <div class="opacity-60 w-full max-w-md p-3 bg-red-200 shadow-lg rounded-xl border-red-400 border-[3px]">
                 <h1 class="text-xl font-semibold text-center text-red-600">This website is not completely done yet 😓
                 </h1>
-            </div>
+            </div> -->
         </div>
 
 
