--- a/pages/login.html
+++ b/pages/login.html
@@ -8,8 +8,11 @@
     <title>Montecillo Roro | Login</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../script.js" type="module"></script>
-    <script src="../loginHandler.js" type="module"></script>
+    <script src="../scripts/checkUserToDashboard.js" type="module"></script>
+    <script src="../scripts/submit_login.js" type="module"></script>
+    <script src="../scripts/main.js" type="module"></script>
+    <script src="../scripts/loginHandler.js" type="module"></script>
+
     <script>
         function togglePassVisibility() {
             let passwordField = document.getElementById("PasswordField");
@@ -26,7 +29,8 @@
 </head>
 
 <body class="h-full scroll-smooth">
-    <div id="loader" class="z-100 fixed inset-0 bg-white flex items-center justify-center z-50 transition-opacity duration-500">
+    <div id="loader"
+        class="z-100 fixed inset-0 bg-white flex items-center justify-center z-50 transition-opacity duration-500">
         <div class="w-12 h-12 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
     </div>
 
@@ -80,7 +84,7 @@
 
                 <div id="error-message" class="hidden mb-4 p-2 text-red-700 bg-red-200 rounded text-center"></div>
 
-                <div class="flex flex-col gap-6">
+                <form id="loginForm" class="flex flex-col gap-6">
                     <input
                         class="rounded border border-gray-300 py-2 px-4 focus:ring-2 focus:ring-blue-400 focus:outline-none"
                         id="EmailField" type="email" placeholder="Email" required />
@@ -96,20 +100,20 @@
                         </button>
                     </div>
 
-                    <button id="loginBtn"
+                    <submit id="loginBtn"
                         class="py-2 px-4 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition-all duration-300"
-                        onclick="submitLogin()">Login</button>
+                        onclick="submitLogin()">Login</submit>
 
                     <p class="text-center text-gray-600">
                         Don't have an account?
                         <a href="../pages/register.html" class="text-blue-500 hover:underline">Register now</a>
                     </p>
-                </div>
+                <form>
             </div>
-            <div class="opacity-60 w-full max-w-md p-3 bg-red-200 shadow-lg rounded-xl border-red-400 border-[3px]">
+            <!-- <div class="opacity-60 w-full max-w-md p-3 bg-red-200 shadow-lg rounded-xl border-red-400 border-[3px]">
                 <h1 class="text-xl font-semibold text-center text-red-600">This website is not completely done yet 😓
                 </h1>
-            </div>
+            </div> -->
         </div>
 
 
