--- a/pages/rates.html
+++ b/pages/rates.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Montecillo Roro | Rates</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
-    <script src="../script.js" type="module"></script>
+    <script src="../scripts/main.js" type="module"></script>
 </head>
 
 <body class="h-full scroll-smooth">
