--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./scripts/main.js" type="module"></script>
     <script src="./scripts/submit_Ticket.js" type="module"></script>
     <script src="./scripts/manageButton.js" type="module"></script>
+    <script src="./scripts/userCheck.js" type="module"></script>
 
 
     <script>
@@ -136,7 +137,7 @@
             <video autoplay muted loop class="w-full h-full object-cover">
                 <source src="./assets/front_vid_no_logo.mp4" type="video/mp4" />
             </video>
-            <form class="absolute inset-0 flex flex-col items-center justify-center text-white text-center gap-5">
+            <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center gap-5">
                 <p class="text-3xl sm:text-7xl font-bold drop-shadow-lg">Explore the Philippines</p>
                 <a class="text-lg mt-2 drop-shadow-lg">Speed, Quality, and Reliability</a>
                 <!-- <a href="/pages/login.html"
@@ -272,7 +273,7 @@
                         onclick="submitTicket(event)">Search
                         destination</button>
                 </div>
-            </form>
+            </div>
         </div>
 
         <!-- Routes Section -->
