--- a/pages/booking.html
+++ b/pages/booking.html
@@ -70,7 +70,7 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/login.html"
+                    <a href="../pages/book.html"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-stone-100 rounded-lg transition inline-block">
                         Book Now
                     </a>
@@ -88,7 +88,7 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/login.html"
+                    <a href="../pages/book.html"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-stone-100 rounded-lg transition inline-block">
                         Book Now
                     </a>
@@ -106,7 +106,7 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/login.html"
+                    <a href="../pages/book.html"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-stone-100 rounded-lg transition inline-block">
                         Book Now
                     </a>
