--- a/pages/book.html
+++ b/pages/book.html
@@ -8,15 +8,17 @@
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
     <!--DATE PICKER-->
     <title>Montecillo Roro | Home</title>
-    <link rel="icon" type="image/png" href="./assets/roro_transparent.png">
-    <script src="./scripts/main.js" type="module"></script>
-    <script src="./scripts/submit_Ticket.js" type="module"></script>
-    <script src="./scripts/manageButton.js" type="module"></script>
-    <script src="./scripts/userCheck.js" type="module"></script>
+    <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
+    <script src="../scripts/main.js" type="module"></script>
+    <script src="../scripts/submit_Ticket.js" type="module"></script>
+    <script src="../scripts/manageButton.js" type="module"></script>
+    <script src="../scripts/userCheck.js" type="module"></script>
 
 </head>
 
 <body class="h-full scroll-smooth">
+    
+    
     <div id="loader"
         class="fixed inset-0 bg-white flex items-center justify-center z-50 transition-opacity duration-500">
         <div class="w-12 h-12 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
@@ -26,16 +28,16 @@
         <!-- Navbar -->
         <nav id="navbar"
             class="fixed w-full h-20 py-4 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
-            <a href="index.html" class="text-lg font-bold flex items-center">
-                <img src="./assets/roro_transparent.png" class="w-12 h-12" alt="Logo" />
+            <a href="../index.html" class="text-lg font-bold flex items-center">
+                <img src="../assets/roro_transparent.png" class="w-12 h-12" alt="Logo" />
             </a>
 
             <!-- Desktop Menu -->
             <div class="hidden md:flex space-x-6 text-lg">
-                <a href="index.html" class="nav-link text-white hover:text-neutral-300 transition">Home</a>
-                <a href="/pages/booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
+                <a href="../index.html" class="nav-link text-white hover:text-neutral-300 transition">Home</a>
+                <a href="./pages/booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
                     Schedules</a>
-                <a href="/pages/rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
+                <a href="./pages/rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
             </div>
 
             <!-- Mobile Menu Button -->
@@ -50,26 +52,17 @@
             <!-- Mobile Menu -->
             <div id="mobile-menu"
                 class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
-                <a href="index.html" class="block py-2">Home</a>
-                <a href="/pages/booking.html" class="block py-2">Routes & Schedules</a>
-                <a href="/pages/rates.html" class="block py-2">Rates</a>
+                <a href="../index.html" class="block py-2">Home</a>
+                <a href="./pages/booking.html" class="block py-2">Routes & Schedules</a>
+                <a href="./pages/rates.html" class="block py-2">Rates</a>
             </div>
         </nav>
 
-        <!-- Hero Section -->
-        <div class="relative w-full h-screen">
-            <div class="bg-black opacity-30 absolute inset-0"></div>
-            <video autoplay muted loop class="w-full h-full object-cover">
-                <source src="./assets/front_vid_no_logo.mp4" type="video/mp4" />
-            </video>
-            <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center gap-5">
-                <p class="text-3xl sm:text-7xl font-bold drop-shadow-lg">Explore the Philippines</p>
-                <a class="text-lg mt-2 drop-shadow-lg">Speed, Quality, and Reliability</a>
-                <!-- <a href="/pages/login.html"
-                    class="mt-4 bg-blue-600 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">
-                    Login and Book Now
-                </a> -->
-
+        <div class="w-full h-screen flex flex-col justify-center items-center bg-blue-100 px-4">
+                <div class="text-center mb-8">
+                    <p class="text-3xl sm:text-7xl font-bold text-blue-800 drop-shadow">Explore the Philippines</p>
+                    <a class="text-lg mt-2 drop-shadow">Speed, Quality, and Reliability</a>
+                </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-2xl">
                     <div class="flex space-x-6 border-b pb-2 mb-4">
                         <button id="book" class="text-gray-500 cursor-pointer">Book a flight</button>
@@ -200,49 +193,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Routes Section -->
-        <section class="w-full py-20 px-6 sm:px-20 bg-white text-center">
-            <h2 class="text-2xl sm:text-3xl font-bold text-black">Our Offered Routes!</h2>
-            <p class="text-black text-lg sm:text-xl mt-6">
-                Ready to take on a new adventure? Browse our offered routes!
-            </p>
-            <a href="/pages/booking.html">
-                <button
-                    class="mt-4 bg-blue-600 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-white rounded-lg transition">
-                    Browse Routes
-                </button>
-            </a>
-        </section>
-
-        <!-- Vision & Mission -->
-        <section class="w-full py-20 px-6 sm:px-20 bg-orange-500 text-center">
-            <h2 class="text-2xl sm:text-3xl font-bold text-white">Vision and Mission</h2>
-            <p class="text-white text-lg sm:text-xl mt-6">
-                To be the leading provider of safe, reliable, and comfortable transportation for everyone.
-                Setting the standard for excellence in travel across the Philippines.
-            </p>
-            <p class="text-white text-lg sm:text-xl mt-4">
-                Our mission is to ensure the safety and peace of mind of our passengers with Montecillo Roro services.
-                We maintain high safety standards for everyone on board.
-            </p>
-        </section>
-
-        <!-- About Us -->
-        <section class="w-full py-20 px-6 sm:px-20 bg-white text-center">
-            <h2 class="text-2xl sm:text-3xl font-bold text-black">About Us</h2>
-            <p class="text-black text-lg sm:text-xl mt-6">
-                Capt. Mangji Hasa Montecillo founded Montecillo Roro in 1985. <br>
-                Captain Montecillo was a talented Filipino mariner who dreamed of enhancing inter-island
-                transport within the Philippines.
-            </p>
-            <a href="/pages/about.html">
-                <button
-                    class="mt-4 bg-blue-600 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-white rounded-lg transition">
-                    More About Us
-                </button>
-            </a>
-        </section>
 
         <!-- Footer -->
         <footer class="w-full bg-gray-900 py-10 text-center text-white">
