--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <label class="block text-gray-700">Departure</label>
                             <input id="dropdownDefaultButton" data-dropdown-toggle="Departuredropdown"
                                 class="text-black w-full p-2 border rounded cursor-pointer" placeholder="Batangas"
-                                type="text" readonly />
+                                type="text" />
 
                             <!-- Dropdown menu -->
                             <div id="Departuredropdown"
@@ -128,7 +128,7 @@
                             <label class="block text-gray-700">Destination</label>
                             <input id="dropdownDestinationButton" data-dropdown-toggle="Destinationdropdown"
                                 class="text-black w-full p-2 border rounded cursor-pointer" placeholder="Caticlan"
-                                type="text" readonly />
+                                type="text"/>
 
                             <!-- Dropdown menu -->
                             <div id="Destinationdropdown"
