--- a/index.html
+++ b/index.html
@@ -213,6 +213,20 @@
             </div>
         </div>
 
+       <!-- App download -->
+        <section class="w-full py-20 px-6 sm:px-20 bg-white text-center">
+            <h2 class="text-2xl sm:text-3xl font-bold text-black">Download the App!</h2>
+            <p class="text-black text-lg sm:text-xl mt-6">
+                With our application available for Android. It's easier and faster to find us!
+            </p>
+            <a href="https://github.com/Grizzey/Montecillo-Roro/releases/download/RELEASE/app-release.apk">
+                <button
+                    class="mt-4 bg-blue-600 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-white rounded-lg transition">
+                    Download
+                </button>
+            </a>
+        </section>
+        
         <!-- Routes Section -->
         <section class="w-full py-20 px-6 sm:px-20 bg-white text-center">
             <h2 class="text-2xl sm:text-3xl font-bold text-black">Our Offered Routes!</h2>
