--- a/pages/book.html
+++ b/pages/book.html
@@ -38,9 +38,11 @@
             <!-- Desktop Menu -->
             <div class="hidden md:flex space-x-6 text-lg">
                 <a href="../index.html" class="nav-link text-white hover:text-neutral-300 transition">Home</a>
-                <a href="./pages/booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
+                <a href="./booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
                     Schedules</a>
-                <a href="./pages/rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
+                <a href="./rates.html class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
+                <a href="./login.html" class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
+
             </div>
 
             <!-- Mobile Menu Button -->
@@ -56,8 +58,9 @@
             <div id="mobile-menu"
                 class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
                 <a href="../index.html" class="block py-2">Home</a>
-                <a href="./pages/booking.html" class="block py-2">Routes & Schedules</a>
-                <a href="./pages/rates.html" class="block py-2">Rates</a>
+                <a href="./booking.html" class="block py-2">Routes & Schedules</a>
+                <a href="./rates.html" class="block py-2">Rates</a>
+                <a href="./login.html" class="block py-2">Login</a>
             </div>
         </nav>
 
