--- a/pages/user.html
+++ b/pages/user.html
@@ -38,6 +38,9 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
+                <a href="/pages/login.html"
+                    class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
+
             </div>
 
             <!-- Mobile Menu a -->
@@ -55,6 +58,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
+                <a href="/pages/login.html"class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
 
@@ -92,11 +96,11 @@
 
                             <div class="ml-5">
                                 <p class="text-gray-700 text-base"><span class="font-medium">Name:</span> <span
-                                    id="userName"></span></p>
-                            <p class="text-gray-700 text-base"><span class="font-medium">Email:</span> <span
-                                    id="userEmail"></span></p>
+                                        id="userName"></span></p>
+                                <p class="text-gray-700 text-base"><span class="font-medium">Email:</span> <span
+                                        id="userEmail"></span></p>
                             </div>
-                           
+
                         </div>
                         <button onclick="logoutUser()"
                             class="mt-20 px-10 py-2 bg-red-500 text-white rounded-md shadow hover:bg-red-600 transition duration-200">
@@ -118,7 +122,8 @@
             <!-- Tickets Section Full Width -->
             <div class="max-w-6xl mx-auto bg-white/90 backdrop-blur-sm rounded-2xl shadow-lg p-8 mt-10 text-center">
                 <h2 class="text-3xl font-bold text-gray-800 mb-4">Tickets</h2>
-                <button onclick="window.location.href='/pages/book.html'" class="px-10 mx-20 py-2 bg-blue-600 text-white rounded-md shadow hover:bg-blue-700 transition duration-200">
+                <button onclick="window.location.href='/pages/book.html'"
+                    class="px-10 mx-20 py-2 bg-blue-600 text-white rounded-md shadow hover:bg-blue-700 transition duration-200">
                     Book New
                 </button>
 
