--- a/pages/login.html
+++ b/pages/login.html
@@ -50,6 +50,9 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
+                <a href="/pages/login.html"
+                    class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
+
             </div>
 
             <!-- Mobile Menu a -->
@@ -67,6 +70,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
+                <a href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
         <div class="relative w-full h-20">
@@ -108,7 +112,7 @@
                         Don't have an account?
                         <a href="../pages/register.html" class="text-blue-500 hover:underline">Register now</a>
                     </p>
-                <form>
+                    <form>
             </div>
             <!-- <div class="opacity-60 w-full max-w-md p-3 bg-red-200 shadow-lg rounded-xl border-red-400 border-[3px]">
                 <h1 class="text-xl font-semibold text-center text-red-600">This website is not completely done yet 😓
