--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
 
        <!-- App download -->
-        <section class="w-full py-20 px-6 sm:px-20 bg-slate-900 text-center">
+        <section id="app-download-card" class="w-full py-20 px-6 sm:px-20 bg-slate-900 text-center">
             <h2 class="text-2xl sm:text-3xl font-bold text-white">Download the App!</h2>
             <p class="text-gray-200 text-lg sm:text-xl mt-6">
                 With our application available for Android. It's easier and faster to find us!
