Padded nav bar test

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <!-- Mobile Menu -->
             <div id="mobile-menu"
-                class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
+                class="hidden absolute top-20 pt-5 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
                 <a href="index.html" class="block py-2">Home</a>
                 <a href="/pages/booking.html" class="block py-2">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2">Rates</a>
