fix app download and css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="content">
         <!-- Navbar -->
         <nav id="navbar"
-            class="fixed w-full h-20 py-4 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
+            class="fixed w-full h-20 pt-20 sm:pt-0 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
             <a href="index.html" class="text-lg font-bold flex items-center">
                 <img src="./assets/roro_transparent.png" class="w-12 h-12" alt="Logo" />
             </a>
@@ -55,7 +55,7 @@
 
             <!-- Mobile Menu -->
             <div id="mobile-menu"
-                class="hidden absolute top-20 pt-5 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
+                class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
                 <a href="index.html" class="block py-2">Home</a>
                 <a href="/pages/booking.html" class="block py-2">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2">Rates</a>
@@ -222,7 +222,7 @@
             <p class="text-gray-200 text-lg sm:text-xl mt-6">
                 With our application available for Android. It's easier and faster to find us!
             </p>
-            <a href="https://github.com/Grizzey/Montecillo-Roro/releases/download/RELEASE/app-release.apk">
+            <a href="https://github.com/Grizzey/Montecillo-Roro/releases/latest/download/MontecilloRoroApp.apk">
                 <button
                     class="mt-4 bg-blue-600 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-white rounded-lg transition">
                     Download
