--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         // Detect if in a WebView
         const isWebView = /(wv|WebView|(Android(?!.*Chrome)))/i.test(navigator.userAgent);
         if (isWebView) {
-          document.getElementById("header").classList.add("pt-10");
+          document.getElementById("navbar").classList.add("pt-10");
         }
     </script>
       
