--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./scripts/submit_Ticket.js" type="module"></script>
     <script src="./scripts/manageButton.js" type="module"></script>
     <script src="./scripts/userCheck.js" type="module"></script>
+    <script src="./scripts/downloadCard.js" type="module"></script>
 
     <script>
         // Detect if in a WebView
