--- a/pages/login.html
+++ b/pages/login.html
@@ -12,22 +12,7 @@
     <script src="../scripts/submit_login.js" type="module"></script>
     <script src="../scripts/main.js" type="module"></script>
     <script src="../scripts/loginHandler.js" type="module"></script>
-
-    <script>
-        function togglePassVisibility() {
-            console.warn("SEE PASS");
-            
-            let passwordField = document.getElementById("PasswordField");
-            let eyeIcon = document.getElementById("togglePassVisibility").querySelector("i");
-            if (passwordField.type === "password") {
-                passwordField.type = "text";
-                eyeIcon.classList.replace("fa-eye", "fa-eye-slash");
-            } else {
-                passwordField.type = "password";
-                eyeIcon.classList.replace("fa-eye-slash", "fa-eye");
-            }
-        }
-    </script>
+    <script src="../"></script>
 </head>
 
 <body class="h-full scroll-smooth">
