--- a/pages/about.html
+++ b/pages/about.html
@@ -89,12 +89,12 @@
                 company as an important regional carrier, contributing to economic development and increased
                 accessibility between the provinces.
             </p>
-            <img src="https://placehold.co/500x250?text=500x250%20|%20Routes" />
+            <img style="width: 300px;" src="../assets/rates.png" />
         </section>
 
         <section
             class="flex flex-col sm:flex-row items-center w-full py-20 px-6 sm:px-20 bg-white text-center gap-6 sm:text-right sm:gap-10">
-            <img src="https://placehold.co/500x250?text=500x250%20|%20Vessels+Gallery" />
+            <img src="../assets/boat.jpg" />
             <p class="text-black text-lg sm:text-xl">
                 Presently, Montecillo Roro has several vessels running on these routes, which are most popular, such as
                 Batangas to Calapan, Calapan to Batangas, and Batangas to Bulalacao. Renowned for its high standards of
