--- a/pages/admin.html
+++ b/pages/admin.html
@@ -9,9 +9,10 @@
     <title>Montecillo Roro | Booking</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
     <script src="../scripts/main.js" type="module"></script>
-    <script src="../scripts/getUser.js" type="module"></script>
+    <!-- <script src="../scripts/getUser.js" type="module"></script> -->
     <script src="../scripts/loginHandler.js" type="module"></script>
     <script src="../scripts/checkUserToDashboard.js" type="module"></script>
+    <script src="../scripts/admin/revokeAll.js" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
