--- a/pages/book.html
+++ b/pages/book.html
@@ -41,6 +41,9 @@
                 <a href="./booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
                     Schedules</a>
                 <a href="./rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
+                <a href="/pages/login.html"
+                    class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
+
             </div>
 
             <!-- Mobile Menu Button -->
@@ -58,6 +61,7 @@
                 <a href="../index.html" class="block py-2">Home</a>
                 <a href="./booking.html" class="block py-2">Routes & Schedules</a>
                 <a href="./rates.html" class="block py-2">Rates</a>
+                <a href="/pages/login.html" class="block py-2">Login</a>
             </div>
         </nav>
 
